[package]
name = "powder"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
env_logger = "0.10.0"
anyhow = "1.0.42"
thiserror = "1.0.26"
ggez = "0.9.3"
glam = { version = "0.24.1", features = ["mint"] }
rand = "0.8.5"
